--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,13 @@
 @font-face {
   font-family: IRANYekan;
   src: url("./assets/font/IRANYekanWebMedium.eot") format("eot"),
-    url("./assets/font/IRANYekanWebMedium.woff") format("woff"),
-    url("./assets/font/IRANYekanWebMedium.woff2") format("woff2");
+    url("./assets/font/IRANYekanWebBlack.eot") format("eot"),
+    url("./assets/font/IRANYekanWebBold.eot") format("eot"),
+    url("./assets/font/IRANYekanWebExtraBlack.eot") format("eot"),
+    url("./assets/font/IRANYekanWebExtraBold.eot") format("eot"),
+    url("./assets/font/IRANYekanWebLight.eot") format("eot"),
+    url("./assets/font/IRANYekanWebRegular.eot") format("eot"),
+    url("./assets/font/IRANYekanWebThin.eot") format("eot"),
 }
 *,
 body {
