--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
     url("./assets/font/IRANYekanWebLight.eot") format("eot"),
     url("./assets/font/IRANYekanWebRegular.eot") format("eot"),
     url("./assets/font/IRANYekanWebThin.eot") format("eot"),
+    url("./assets/font/IRANYekanWebMedium.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebBlack.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebBold.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebExtraBlack.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebExtraBold.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebLight.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebRegular.woff2") format("woff2"),
+    url("./assets/font/IRANYekanWebThin.woff2") format("woff2");
 }
 *,
 body {
