font woff2 added

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
     url("./assets/font/IRANYekanWebLight.eot") format("eot"),
     url("./assets/font/IRANYekanWebRegular.eot") format("eot"),
     url("./assets/font/IRANYekanWebThin.eot") format("eot"),
+    url("./assets/font/IRANYekanWebMedium.woff") format("woff"),
+    url("./assets/font/IRANYekanWebBlack.woff") format("woff"),
+    url("./assets/font/IRANYekanWebBold.woff") format("woff"),
+    url("./assets/font/IRANYekanWebExtraBlack.woff") format("woff"),
+    url("./assets/font/IRANYekanWebExtraBold.woff") format("woff"),
+    url("./assets/font/IRANYekanWebLight.woff") format("woff"),
+    url("./assets/font/IRANYekanWebRegular.woff") format("woff"),
+    url("./assets/font/IRANYekanWebThin.woff") format("woff"),
     url("./assets/font/IRANYekanWebMedium.woff2") format("woff2"),
     url("./assets/font/IRANYekanWebBlack.woff2") format("woff2"),
     url("./assets/font/IRANYekanWebBold.woff2") format("woff2"),
