--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
     url("./assets/font/IRANYekanWebExtraBold.woff2") format("woff2"),
     url("./assets/font/IRANYekanWebLight.woff2") format("woff2"),
     url("./assets/font/IRANYekanWebRegular.woff2") format("woff2"),
-    url("./assets/font/IRANYekanWebThin.woff2") format("woff2");
+    url("./assets/font/IRANYekanWebThin.woff2") format("woff2"),
 }
 *,
 body {
