--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,11 @@ body {
 .swiper-button-prev::after {
   display: none;
 }
+
+.leaflet-container {
+  width: 526px;
+  height: 324px;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.05);
+}
