--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,13 @@
   }
 }
 
+input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  
 *,
 body {
   font-family: IRANYekan;
